# iqfit

./: Cargo.toml  LICENSE  README.md  build.rs
benches/: solver_benchmark.rs
src/: board.rs  lib.rs  main.rs  pieces.rs  puzzles.rs  solver.rs
src/board/: binary_board.rs  display_board.rs  display_board_placement_info.rs  display_board_placement_info_gen.rs
