[package]
name = "iqfit"
version = "0.1.0"
authors = ["Valentin Tolmer <valentin@tolmer.fr>"]
edition = "2018"

[lib]
name = "iqfit_solver"
path = "src/lib.rs"

[[bin]]
name = "iqfit"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.3"
generic-tests = "0.1.2"

[dependencies]
modular-bitfield = "~0.11"
colored = "2"
lazy_static = "1.4"

[[bench]]
name = "solver_benchmark"
harness = false
